mudança de icone e no package

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "qr-code-generator",
+  "name": "qr.code",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "brendondev",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "qr code generate"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
