--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "brendondev",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "qr code generate"
   },
