--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
+    "@vercel/analytics": "^1.3.1",
     "biome": "^0.2.2",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
